Bug 279283 - error starting tool "find files" from fish
Summary: error starting tool "find files" from fish
Status: RESOLVED FIXED
Alias: None
Product: konqueror
Classification: Applications
Component: general (other bugs)
Version First Reported In: 4.7.0
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: Konqueror Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-08-03 12:35 UTC by Ferdinand Gassauer
Modified: 2012-07-22 21:31 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.9.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ferdinand Gassauer 2011-08-03 12:35:14 UTC
Version:           4.7.0 (using KDE 4.7.0) 
OS:                Linux

Could not read file fish://gass@my_ip/opt/data1/dos/public/kggrp/.

Reproducible: Always

Steps to Reproduce:
open a remote site with fish protocol and click tools/ find files

Actual Results:  
error as above

Expected Results:  
open search view

OS: Linux (x86_64) release 2.6.37.6-0.5-desktop
Compiler: gcc
Comment 1 Dawit Alemayehu 2011-12-15 06:08:56 UTC
You cannot use the Find File tool over remote protocols. Perhaps the action should be disabled when a remote view is currently active.
Comment 2 Dawit Alemayehu 2012-07-22 21:30:19 UTC
Git commit 9a622c16d969a39571b610304db759f941b5d4f3 by Dawit Alemayehu.
Committed on 18/07/2012 at 04:47.
Pushed by adawit into branch 'KDE/4.9'.

Show the "Find File" and "Open Terminal" actions in the Tools for file URLs only.
FIXED-IN: 4.9.0
REVIEW: 105607

M  +18   -10   dolphin/src/dolphinpart.cpp
M  +2    -0    dolphin/src/dolphinpart.h

http://commits.kde.org/kde-baseapps/9a622c16d969a39571b610304db759f941b5d4f3
Comment 3 Dawit Alemayehu 2012-07-22 21:31:07 UTC
Git commit d1d0389a925654084f8f33aab58fdfd5d7ac38d0 by Dawit Alemayehu.
Committed on 18/07/2012 at 04:47.
Pushed by adawit into branch 'master'.

Show the "Find File" and "Open Terminal" actions in the Tools for file URLs only.
FIXED-IN: 4.9.0
REVIEW: 105607
(cherry picked from commit 9a622c16d969a39571b610304db759f941b5d4f3)

M  +18   -10   dolphin/src/dolphinpart.cpp
M  +2    -0    dolphin/src/dolphinpart.h

http://commits.kde.org/kde-baseapps/d1d0389a925654084f8f33aab58fdfd5d7ac38d0