Show the "Find File" and "Open Terminal" actions in the Tools for file URLs only.

BUG: 279283
FIXED-IN: 4.9.0
REVIEW: 105607
(cherry picked from commit 9a622c16d969a39571b610304db759f941b5d4f3)